# Basic-Raytracer

./: .gitignore  CMakeLists.txt  raytracer.cc
Scene/: Scene.cc  Scene.h
Scene/Light/: Light.cc  Light.h
camera/: camera.cc  camera.cpp  camera.h
geometry/: geometry.h  geometry.tcc  geometry_test.cc
scene/: scene.cc  scene.h
scene/Light/: light.cc  light.h
screen/: screen.cc  screen.h
utils/color/: color.cc  color.cpp  color.h
utils/hittable/: hittable.cc  hittable.h
utils/material/: material.cc  material.h
utils/math/: math.cc  math.h  math.tcc  math_test.cc
